--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zdqyi2905/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zdqyi2905/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zdqyi2905/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788549.md#1" target="_blank">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/12/n11788549.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/171203073058100311-150x120.jpg" align ="left"></a>从香港亚视出道的港星田蕊妮（阿田），2006年底加入无线，因主演不少剧集成为当家花旦，并夺得视后。去年8月，她在facebook（fb）嘲讽一直拒绝回应民众诉求的特首林郑月娥，引发大陆五毛扬言抵制她的新剧《她她她的少女时代》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 10:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793810.md#1" target="_blank">蓬佩奥：美国恢复威慑战略 对抗中俄伊朗</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/15/n11793810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NO79T-150x120.jpg" align ="left"></a>美国国务卿迈克?蓬佩奥（Mike Pompeo）周一（1月13日）在加州旧金山发表两个演说，分别提到美国恢复威懗战略对抗中共、俄罗斯及伊朗等敌对国家；另提醒硅谷高科技主管与中国做生意不要牺牲美国价值。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11781408.md#1" target="_blank">【独家】专访郑文杰：被虐待致精神崩溃（三）</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11781408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ab9f28ff9492ecbf0c84d14396a0f33-150x120.jpeg" align ="left"></a>去年8月被中共当局以所谓“嫖娼”罪名拘留的29岁英国驻港领馆前雇员郑文杰日前在英国接受大纪元独家专访，详述自己在西九龙高铁站被“送中”，在深圳被关押、酷刑对待、单独囚禁及被逼认罪，以及出狱后在香港、台湾被跟踪恐吓的经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 9:10 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793678.md#1" target="_blank">说崩就崩 大陆ETC概念股集体暴跌</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793678.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1440px-ETC_Lane_in_China-150x120.jpg" align ="left"></a>大陆电子不停车收费系统（ETC）上市公司1月14日出现股价集体暴跌，业内人士分析，ETC企业依靠强推ETC获利暴涨，但前景不被看好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 8:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793494.md#1" target="_blank">借吴花燕之病 民政部募捐百万 仅转出2万</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-150x120.jpg" align ="left"></a>近日，体重仅43斤的贵州贫困大学生吴花燕去世了。据陆媒披露，中共民政部旗下的募捐平台在吴花燕不知情的情况下，同时使用两个平台募款超过100万元，但吴花燕在去世前仅获得两万元。有大陆公益人指，这个募捐平台意图拖死患者达到囤积捐款的目的，此前多个案例他们都是同样的操作手法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793524.md#1" target="_blank">美中签协议前 莱特希泽姆钦发声明提两件事</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793524.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1LA7LC-150x120.jpg" align ="left"></a>在美中签署第一阶段贸易协议前一天，美国贸易代表莱特希泽和财政部长姆钦发表联合声明，强调了和购买农产品和关税相关的两件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 7:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793468.md#1" target="_blank">白向群被曝拥豪宅十多套 被查扣名酒逾千瓶</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/bai-xiangqun_1-150x120.jpg" align ="left"></a>中共内蒙古自治区政府前副主席白向群涉受贿、贪污等罪被判刑两个多月后，其贪腐细节日前被曝光，包括其通过插手煤炭资源配置等捞钱，坐拥十多套豪宅，落马时从其家中查扣了贵重名酒1000多瓶等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 7:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1" target="_blank">南昌十多名法轮功学员遭中共非法判刑</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/2007-4-17-zxtup-06-150x120.jpg" align ="left"></a>江西南昌市十多名法轮功学员在2019年年底被南昌市西湖区法院非法判刑，其中陈文被非法判刑9年半、陈玉莲8年、藤茶花7年半、曹根秀7年、高银凤5年、严锦华5年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1" target="_blank">孟晚舟引渡聆讯 加拿大法官禁媒体现场录像</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793430.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3-can_21884547-150x120.jpg" align ="left"></a>美国的检察官指控孟晚舟就华为与Skycom Tech（香港星通技术有限公司）的关系，向包括汇丰银行（HSBC）在内的外国银行做出了虚假陈述。美国司法部称，Skycom Tech是一家向伊朗出售电信设备的子公司，这使相关的金融机构有违反美国对伊朗制裁的风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793607.md#1" target="_blank">剑指中共 美欧日提WTO补贴协定六大改革</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793607.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1037108932-2-150x120.jpg" align ="left"></a>美国、欧盟和日本周二（1月14日）发布联合声明，提出世贸组织（WTO）补贴规范六大改革方向，以遏制扭曲市场的补贴。此举显然是剑指北京的补贴措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793160.md#1" target="_blank">范冰冰转发制片人微博 被指复出之路顺利推进</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793160.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-688729168-150x120.jpg" align ="left"></a>1月13日，大陆知名制片人方励在微博发文，悬赏百万人民币为98岁的老父寻母。不仅获得导演李玉帮忙转发，女星范冰冰也发文表示：“圆一个前世今生的梦。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1" target="_blank">小米和华为互撕 指荣耀手机库存大量积压</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/leijun-150x120.jpg" align ="left"></a>最近华为荣耀和小米的红米手机在网上互撕。Redmi（红米）总裁卢伟冰爆料华为荣耀存在大量库存机，根本卖不出去，引发关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793352.md#1" target="_blank">【热点互动】2020中国经济灰犀牛与黑天鹅</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793352.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9d36a59511ff4_ttl7daydK4_7f468fcf90890af5-150x120.jpg" align ="left"></a>迈入2020，中国经济并不乐观。新年伊始就传出互联网行业大量裁员的消息。外界分析2020中国经济将面对成群的灰犀牛（可预知但被忽视的风险）及黑天鹅（不可预知的危机）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 5:21 AM							</td></tr>
@@ -21,18 +31,8 @@
 2.香港监警会300页报告 列警方多个问题.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791592.md#1" target="_blank">跟进辞中常委 蒋万安等人盼国民党彻底改革</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/7a6c5d3bcbc6ade36cf6df507e118c62-150x120.jpg" align ="left"></a>中华民国总统暨立委选举结果揭晓，民进党大胜，中国国民党掀起改革声浪，国民党立委蒋万安、江启臣、黄昭顺、沈智慧、杨琼璎都表达辞去国民党中常委一职，希望国民党能够彻底改革。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792529.md#1" target="_blank">布拉格与台北结为姊妹市打脸中共 上海跳脚</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a4d7b118bedefde70030f6ea4f0e21de-150x120.jpg" align ="left"></a>1月13日，捷克首都布拉格市与台北市签署协议，缔结为姊妹市。布拉格三个月前取消了与北京的姊妹市关系，打脸中共。14日中共上海市政府外事办公室发声明称，该市解除与捷克布拉格市友城关系并暂停一切官方往来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792523.md#1" target="_blank">业界：美中签署贸易协议 人民币仍将走贬</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792523.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ece9ce6653978d24b49f2322073548d8-150x120.jpg" align ="left"></a>受美中将签署第一阶段贸易协议影响，近来，人民币兑美元不断走高，但有业界人士认为，人民币此波涨势将难以为继，预计人民币将走贬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791519.md#1" target="_blank">新年伊始 大陆房企发行数十亿美元债券</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f575514079384f15db11fc53d97d8d7f-150x120.jpg" align ="left"></a>2020年的前两周，大陆房地产企业已经发行了几十亿美元的中长期海外债券。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 7:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791948.md#1" target="_blank">广东珠海长炼石化工厂爆炸 浓烟滚滚</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791948.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled-5-150x120.jpg" align ="left"></a>1月14日，广东珠海高栏港一化工厂发生爆炸，现场火光冲天。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:09 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791100.md#1" target="_blank">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/processed-2-150x120.jpeg" align ="left"></a>1月13日凌晨12时许，北京昌平区政府纠集600多名特警、十辆挖掘车，偷偷进入果庄村进行强拆，激起业主和村民反抗，有男业主遭到群殴，一名女子昏迷倒地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792015.md#1" target="_blank">程晓容：贵州女学生贫病去世 粉碎中共谎言</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fupin-150x120.jpg" align ="left"></a>吴花燕的苦难，是冰山一角；两则茅台酒的新闻，也是冰山一角。这个冰山就是中共70年祸国殃民的全记录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792084.md#1" target="_blank">美媒：不必北京同意 台湾经济可持续成长</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/2ae84f575af5f43dc192ae90087f6c9d-150x120.jpg" align ="left"></a>美国媒体报导，中华民国总统蔡英文高票连任，外界普遍解读选民排斥更紧密的两岸关系。由于台湾制造业底子雄厚，这项令北京不满的选举结果可能不会显着影响台湾经济。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 3:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1" target="_blank">泰国现首例武汉肺炎 专家忧病毒扩散</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791916.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-73408647-150x120.jpg" align ="left"></a>世界卫生组织1月13日表示，泰国发现首宗确诊感染武汉新型冠状病毒的病例，患者是一名61岁中国籍女游客，这是首例在中国以外地区发现感染病例。有专家担心，有关病毒可能已扩散到其它市场，认为世卫及大陆应了解清楚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 3:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1" target="_blank">美团CEO删除百度APP 网民跟进删除</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11791766.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/10/9e0d556bcec963c0587ddf34dbb3db62-150x120.jpg" align ="left"></a>1月13日晚间，大陆美团CEO王兴发文表示删除百度APP。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 1:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793560.md#1" target="_blank">妻子被“潜规则” 男子起诉北影副校长</a><br></h3>1月14日，北京电影学院副校长孙立军“潜规则”李女士案件，在北京市海淀区法院进行不公开审理，但案件未当庭宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 6:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792705.md#1" target="_blank">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br></h3>1月14日，世界卫生组织（WHO）（简称“世卫”）表示，中国武汉肺炎疫情“2019新型冠状病毒”存在“有限度”人传人情况，主要是家人间的感染，而且有可能扩大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 9:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792580.md#1" target="_blank">杭州国企施工现场罐体发生爆裂 致3人死亡</a><br></h3>今天（1月14日），中共当局国有企业、杭州市环境集团餐厨二期项目施工现场发生爆裂，导致3人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 8:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792346.md#1" target="_blank">国企青海盐湖预亏超400亿 创A股亏损纪录</a><br></h3>近日，素有“钾肥之王”之称的大陆最大钾肥生产企业*ST盐湖发布2019年业绩公告称，预计全年亏损432亿元至472亿元（人民币，下同），刷新了A股上市公司亏损最高纪录。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 5:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792093.md#1" target="_blank">广东高层多空降 分析：北京忌惮地方势力</a><br></h3>最近，中共广东正在举行政协、人大会议。此前，广东官场人事已进行了一轮调整。据港媒统计，目前广东省“四套班子”中共有21名高层官员，但本土官员只剩3人。分析认为，随着京官等空降增多，广东本土派加速式微。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
